--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,5 +21,7 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
+    - name: Depends
+      run: mvn dependency:resolve
     - name: Build with Maven
       run: mvn -B package --file pom.xml
