--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,6 +46,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/rundeck-rudder-nodes-plugin-2.0-SNAPSHOT.jar
+          asset_path: target
           asset_name: rundeck-rudder-nodes-plugin-2.0-SNAPSHOT.jar
           asset_content_type: application/java-archive
